// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cluster creation control data for OST generates correctly 1`] = `
Array [
  Object {
    "id": "detailStep",
    "title": "Cluster details",
    "type": "step",
  },
  Object {
    "active": "OpenStack",
    "id": "infrastructure",
    "name": "Infrastructure",
    "type": "reviewinfo",
  },
  Object {
    "available": Array [],
    "encode": Array [
      "cacertificate",
    ],
    "footer": <CreateCredentialModal
      handleModalToggle={[MockFunction]}
    />,
    "id": "connection",
    "name": "Infrastructure provider credential",
    "onSelect": [Function],
    "placeholder": "Select a credential",
    "providerId": "ost",
    "tooltip": "The settings that are required for the selected provider. You can select an existing connection, or add a new connection. Cannot be changed after creation.",
    "type": "singleselect",
    "validation": Object {
      "notification": "Select a connection",
      "required": true,
    },
  },
  Object {
    "id": "name",
    "name": "Cluster name",
    "placeholder": "Enter cluster name",
    "reverse": "ClusterDeployment[0].metadata.name",
    "tooltip": "The unique name of your cluster. The value must be a string that contains lowercase alphanumeric values, such as dev. Cannot be changed after creation.",
    "type": "text",
    "validation": Object {
      "constraint": "^[a-z0-9]([a-z0-9-]{0,61}[a-z0-9])?$",
      "notification": "The value must be a valid DNS label that consists of up to 63 lowercase alphanumeric characters. The character '-' is also permitted, as long as it does not appear in the first or last position.",
      "required": true,
    },
  },
  Object {
    "available": Array [],
    "id": "clusterSet",
    "name": "Cluster set",
    "placeholder": "Select a cluster set",
    "tooltip": "A ManagedClusterSet is a group of managed clusters. With a ManagedClusterSet, you can manage access to all of the managed clusters in the group together. Clusters from the pool will be added to this set. After the cluster pool is created, the cluster set cannot be changed.",
    "type": "singleselect",
    "validation": Object {
      "required": false,
    },
  },
  Object {
    "id": "baseDomain",
    "name": "Base DNS domain",
    "placeholder": "Enter base DNS domain",
    "tip": "All DNS records must be subdomains of this base and include the cluster name. This cannot be changed after cluster installation.",
    "tooltip": "The base domain of your provider, which is used to create routes to your OpenShift Container Platform cluster components. It is configured in your cloud provider's DNS as a Start Of Authority record (SOA). Cannot be changed after creation.",
    "type": "text",
    "validation": Object {
      "contextTester": [Function],
      "required": true,
    },
  },
  Object {
    "active": false,
    "id": "fips",
    "name": "FIPS",
    "tip": "Use the Federal Information Processing Standards (FIPS) modules provided with Red Hat Enterprise Linux CoreOS instead of the default Kubernetes cryptography suite.",
    "type": "checkbox",
  },
  Object {
    "active": false,
    "id": "showSecrets",
    "type": "hidden",
  },
  Object {
    "fetchAvailable": Object {
      "emptyDesc": "No default images. Enter a release image path.",
      "loadingDesc": "Loading release image sets...",
      "query": [Function],
      "setAvailable": [Function],
      "setAvailableMap": [Function],
    },
    "id": "imageSet",
    "name": "Release image",
    "onSelect": [Function],
    "placeholder": "Select or enter a release image",
    "reverse": [Function],
    "simplified": [Function],
    "tooltip": "URL to the OpenShift install image set to use. Available images are listed, or you can enter your own path to add an image to the list.",
    "type": "combobox",
    "validation": Object {
      "notification": "Select a release image",
      "required": true,
    },
  },
  Object {
    "active": false,
    "hidden": true,
    "id": "singleNodeFeatureFlag",
    "type": "checkbox",
  },
  Object {
    "active": false,
    "hidden": [Function],
    "icon": <DevPreviewLabel />,
    "id": "singleNode",
    "name": "Single Node OpenShift",
    "onSelect": [Function],
    "tooltip": "To enable a single node OpenShift cluster with one control plane node and zero worker nodes. Only available in OpenShift 4.8 and higher.",
    "type": "checkbox",
  },
  Object {
    "active": Array [],
    "id": "additional",
    "name": "Additional labels",
    "tip": "Use labels to organize and place application subscriptions and policies on this cluster. The placement of resources are controlled by label selectors. If your cluster has the labels that match the resource placement’s label selector, the resource will be installed on your cluster after creation.",
    "type": "labels",
  },
  Object {
    "active": Array [
      "OpenStack",
    ],
    "availableMap": Object {
      "OpenStack": Object {
        "replacements": Object {
          "install-config": Object {
            "encode": true,
            "newTab": true,
            "template": [Function],
          },
        },
      },
    },
    "hasReplacements": true,
    "id": "infrastructure",
    "type": "hidden",
  },
  Object {
    "id": "nodePoolsStep",
    "title": "Node pools",
    "type": "step",
  },
  Object {
    "id": "nodes",
    "info": "The instance type and quantity of control plane and worker nodes to create for your cluster. Additional worker nodes can be added after the cluster is created.",
    "type": "title",
  },
  Object {
    "available": Array [
      "amd64",
      "arm64",
      "s390x",
      "ppc64le",
    ],
    "cacheUserValueKey": "create.cluster.architecture",
    "id": "architecture",
    "name": "CPU architecture",
    "placeholder": "Enter CPU architecture",
    "tooltip": "Determines the CPU instruction set architecture of the machines in the pool. Only set this value when the architecture of the managed cluster is different from the architecture of the hub.",
    "type": "singleselect",
  },
  Object {
    "controlData": Array [
      Object {
        "collapsable": true,
        "collapsed": true,
        "id": "masterPool",
        "info": "Three control plane nodes will be created to control this cluster.",
        "subtitle": "Control plane pool",
        "type": "section",
      },
      Object {
        "active": "m1.xlarge",
        "id": "masterType",
        "name": "Instance type",
        "tooltip": "The OpenStack compute flavor.",
        "type": "text",
        "validation": Object {
          "constraint": "[A-Za-z0-9-_.]+",
          "notification": "Value must be alphanumeric, including periods.",
          "required": true,
        },
      },
    ],
    "id": "masterPool",
    "onlyOne": true,
    "type": "group",
  },
  Object {
    "controlData": Array [
      Object {
        "collapsable": true,
        "collapsed": true,
        "id": "workerPool",
        "info": "One or more worker nodes will be created to run the container workloads in this cluster.",
        "subtitle": [Function],
        "type": "section",
      },
      Object {
        "active": "worker",
        "disabled": [Function],
        "id": "workerName",
        "name": "Pool name",
        "placeholder": "Enter pool name",
        "tooltip": "The name for your worker pool.",
        "type": "text",
        "validation": Object {
          "constraint": "[A-Za-z0-9-_]+",
          "notification": "Value must be alphanumeric.",
          "required": true,
        },
      },
      Object {
        "active": "m1.xlarge",
        "cacheUserValueKey": "create.cluster.worker.type",
        "id": "workerType",
        "name": "Instance type",
        "tooltip": "The OpenStack compute flavor.",
        "type": "text",
        "validation": Object {
          "constraint": "[A-Za-z0-9-_.]+",
          "notification": "Value must be alphanumeric, including periods.",
          "required": true,
        },
      },
      Object {
        "cacheUserValueKey": "create.cluster.compute.node.count",
        "id": "computeNodeCount",
        "initial": "3",
        "name": "Node count",
        "tooltip": "The number of nodes in this node pool.",
        "type": "number",
        "validation": Object {
          "notification": "Value must be integer.",
          "required": true,
          "tester": /\\^\\\\d\\+\\$/,
        },
      },
    ],
    "hidden": [Function],
    "id": "workerPools",
    "prompts": Object {
      "addPrompt": "Add worker pool",
      "baseName": "worker",
      "deletePrompt": "Delete node pool",
      "disableDeleteForFirst": true,
      "nameId": "workerName",
    },
    "type": "group",
  },
  Object {
    "id": "networkStep",
    "title": "Networking",
    "type": "step",
  },
  Object {
    "active": "",
    "id": "externalNetworkName",
    "name": "External network name",
    "tooltip": "The name for the external OpenStack network.",
    "type": "text",
    "validation": Object {
      "notification": "External network name is required.",
      "required": true,
    },
  },
  Object {
    "active": "",
    "hidden": [Function],
    "id": "lbFloatingIP",
    "name": "LB floating IP",
    "placeholder": "Enter LB floating IP",
    "tooltip": "The existing floating IP address on the Load Balancer for the OpenShift cluster.",
    "type": "text",
    "validation": Object {
      "contextTester": [Function],
      "required": true,
    },
  },
  Object {
    "active": "",
    "hidden": [Function],
    "id": "apiFloatingIP",
    "name": "API floating IP",
    "placeholder": "Enter API floating IP",
    "tooltip": "The existing floating IP address on the external network for the OpenShift API.",
    "type": "text",
    "validation": Object {
      "contextTester": [Function],
      "required": true,
    },
  },
  Object {
    "active": "",
    "id": "ingressFloatingIP",
    "name": "Ingress floating IP",
    "placeholder": "Enter ingress floating IP",
    "tooltip": "The existing floating IP address on the external network for the ingress port.",
    "type": "text",
    "validation": Object {
      "contextTester": [Function],
      "required": true,
    },
  },
  Object {
    "active": Array [],
    "id": "externalDNS",
    "name": "External DNS IP addresses",
    "placeholder": "Optional: Enter one or more external DNS IP addresses",
    "tooltip": "The external DNS IP addresses for name resolution on the private network.",
    "type": "values",
    "validation": Object {
      "contextTester": [Function],
      "required": false,
    },
  },
  Object {
    "id": "networkInfo",
    "info": "Configure network access for your cluster. One network is created by default.",
    "type": "title",
  },
  Object {
    "active": "OVNKubernetes",
    "available": Array [
      "OpenShiftSDN",
      "OVNKubernetes",
      "Kuryr",
    ],
    "id": "networkType",
    "name": "Network type",
    "tooltip": "The pod network provider plug-in to deploy. OVNKubernetes is required for IPv6. The default value is OpenShiftSDN.",
    "type": "singleselect",
    "validation": Object {
      "notification": "Value must be a valid security key.",
      "required": true,
    },
  },
  Object {
    "controlData": Array [
      Object {
        "collapsable": true,
        "id": "networkGroup",
        "info": "Specify at least one network. Multiple are required for IPv6.",
        "subtitle": [Function],
        "type": "section",
      },
      Object {
        "active": "10.128.0.0/14",
        "id": "clusterNetwork",
        "name": "Cluster network CIDR",
        "placeholder": "Enter cluster network CIDR",
        "tooltip": "A block of IP addresses from which pod IP addresses are allocated. The OpenShiftSDN network plug-in supports multiple cluster networks. The address blocks for multiple cluster networks must not overlap. Select address pools large enough to fit your anticipated workload. The default value is 10.128.0.0/14.",
        "type": "text",
        "validation": Object {
          "notification": "Value must be a valid IPv4 or IPv6 CIDR.",
          "required": true,
          "tester": Object {
            "test": [Function],
          },
        },
      },
      Object {
        "active": "23",
        "id": "hostPrefix",
        "name": "Network host prefix",
        "placeholder": "Enter network host prefix",
        "tooltip": "The subnet prefix length to assign to each individual node. For example, if hostPrefix is set to 23, then each node is assigned a /23 subnet out of the given CIDR, allowing for 510 (2^(32 - 23) - 2) pod IP addresses. The default is 23.",
        "type": "text",
        "validation": Object {
          "notification": "Value must be integer.",
          "required": true,
          "tester": /\\^\\\\d\\+\\$/,
        },
      },
      Object {
        "active": "172.30.0.0/16",
        "id": "serviceNetwork",
        "name": "Service network CIDR",
        "placeholder": "Enter service network CIDR",
        "tooltip": "A block of IP addresses for services. OpenShiftSDN allows only one serviceNetwork block. The address block must not overlap any other network block. The default value is 172.30.0.0/16.",
        "type": "text",
        "validation": Object {
          "notification": "Value must be a valid IPv4 or IPv6 CIDR.",
          "required": true,
          "tester": Object {
            "test": [Function],
          },
        },
      },
      Object {
        "active": "10.0.0.0/16",
        "id": "machineCIDR",
        "name": "Machine CIDR",
        "placeholder": "Enter machine CIDR",
        "tooltip": "A block of IP addresses used by the OpenShift Container Platform hosts. The address block must not overlap any other network block. The default value is 10.0.0.0/16.",
        "type": "text",
        "validation": Object {
          "notification": "Value must be a valid IPv4 or IPv6 CIDR.",
          "required": true,
          "tester": Object {
            "test": [Function],
          },
        },
      },
    ],
    "id": "networks",
    "prompts": Object {
      "addPrompt": "Add network",
      "deletePrompt": "Delete network",
    },
    "type": "group",
  },
  Object {
    "id": "proxyStep",
    "title": "Proxy",
    "type": "step",
  },
  Object {
    "id": "proxyInfo",
    "info": "Production environments can deny direct access to the Internet and instead have an HTTP or HTTPS proxy available. You can configure a new OpenShift Container Platform cluster to use a proxy by configuring the proxy settings.",
    "type": "title",
  },
  Object {
    "active": false,
    "id": "hasProxy",
    "name": "Use proxy",
    "onSelect": [Function],
    "type": "checkbox",
  },
  Object {
    "disabled": true,
    "id": "httpProxy",
    "name": "HTTP proxy",
    "tip": "Requires this format: http://<username>:<pswd>@<ip>:<port>",
    "type": "text",
    "validation": Object {
      "notification": "Value must be a valid URL format.",
      "required": true,
      "tester": Object {
        "test": [Function],
      },
    },
  },
  Object {
    "disabled": true,
    "id": "httpsProxy",
    "name": "HTTPS proxy",
    "tip": "Requires this format: https://<username>:<pswd>@<ip>:<port>",
    "type": "text",
    "validation": Object {
      "notification": "Value must be a valid URL format.",
      "required": true,
      "tester": Object {
        "test": [Function],
      },
    },
  },
  Object {
    "active": Array [],
    "disabled": true,
    "id": "noProxy",
    "name": "No proxy",
    "tip": "Add a comma-separated list of sites that bypass the proxy. The hub API server address must be included in this list. By default, all cluster egress traffic is sent through the proxy, including calls to hosting and cloud provider APIs.",
    "type": "values",
    "validation": Object {
      "notification": "Each value must be a domain name (optionally prefaced with '.' to match subdomains only), IP address, other network CIDR, or '*'.",
      "required": false,
      "tester": Object {
        "test": [Function],
      },
    },
  },
  Object {
    "disabled": true,
    "id": "additionalTrustBundle",
    "name": "Additional trust bundle",
    "placeholder": "-----BEGIN CERTIFICATE-----
<MY_TRUSTED_CA_CERT>
-----END CERTIFICATE-----",
    "type": "textarea",
  },
  Object {
    "id": "disconnectedStep",
    "title": "Disconnected installation",
    "type": "step",
  },
  Object {
    "id": "disconnectedInfo",
    "info": "Restricted networks which do not have direct access to the Internet require a mirror location of the Red Hat Enterprise Linux CoreOS image.",
    "type": "title",
  },
  Object {
    "active": false,
    "id": "isDisconnected",
    "name": "Create disconnected installation",
    "onSelect": [Function],
    "type": "checkbox",
  },
  Object {
    "disabled": true,
    "id": "clusterOSImage",
    "name": "Cluster OS image",
    "tip": "The location of the Red Hat Enterprise Linux CoreOS image in your local registry.",
    "type": "text",
    "validation": Object {
      "notification": "Value must be a valid URL format.",
      "required": true,
      "tester": Object {
        "test": [Function],
      },
    },
  },
  Object {
    "disabled": true,
    "id": "imageContentSources",
    "name": "Image Content Sources",
    "tip": "The imageContentSources values that were generated during mirror registry creation.",
    "type": "textarea",
  },
  Object {
    "disabled": true,
    "id": "disconnectedAdditionalTrustBundle",
    "name": "Additional trust bundle",
    "placeholder": "-----BEGIN CERTIFICATE-----
<MY_TRUSTED_CA_CERT>
-----END CERTIFICATE-----",
    "tip": "The contents of the certificate file that you used for your mirror registry, which can be an existing, trusted certificate authority or the self-signed certificate that you generated for the mirror registry.",
    "type": "textarea",
  },
  Object {
    "active": true,
    "id": "includeKlusterletAddonConfig",
    "type": "hidden",
  },
  Object {
    "id": "automationStep",
    "title": "Automation",
    "type": "step",
  },
  Object {
    "id": "chooseTemplate",
    "info": "Optional: Choose an automation template to run Ansible jobs at different stages of the cluster lifecycle.",
    "type": "title",
  },
  Object {
    "component": <AutomationProviderHint
      className="creation-view-controls-hint"
      component="hint"
    />,
    "id": "automationProviderHint",
    "type": "custom",
  },
  Object {
    "id": "templateName",
    "name": "Automation template",
    "onSelect": [Function],
    "placeholder": "Select an automation template",
    "prompts": Object {
      "icon": <ExternalLinkAltIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />,
      "id": "add-automation-template",
      "positionBottomRight": true,
      "prompt": "Add automation template",
      "type": "link",
      "url": "/multicloud/infrastructure/automations/add",
    },
    "tooltip": "Only templates with valid Ansible Automation Platform credentials are listed.",
    "type": "singleselect",
    "validation": Object {
      "required": false,
    },
  },
  Object {
    "component": <TemplateLinkOutControl />,
    "id": "curatorLinkOut",
    "type": "custom",
  },
  Object {
    "component": <TemplateSummaryControl />,
    "id": "curatorSummary",
    "type": "custom",
  },
  Object {
    "active": "",
    "id": "clusterCuratorSpec",
    "reverse": [Function],
    "type": "hidden",
  },
  Object {
    "active": Array [],
    "hidden": true,
    "id": "supportedCurations",
    "type": "values",
  },
  Object {
    "active": "",
    "id": "toweraccess-install",
    "type": "hidden",
  },
  Object {
    "active": "",
    "id": "toweraccess-upgrade",
    "type": "hidden",
  },
  Object {
    "active": "",
    "id": "toweraccess-scale",
    "type": "hidden",
  },
  Object {
    "active": "",
    "id": "toweraccess-destroy",
    "type": "hidden",
  },
  Object {
    "active": "",
    "id": "reconcilePause",
    "type": "hidden",
  },
]
`;

exports[`Cluster creation control data for OST generates correctly for MCE 1`] = `
Array [
  Object {
    "id": "detailStep",
    "title": "Cluster details",
    "type": "step",
  },
  Object {
    "active": "OpenStack",
    "id": "infrastructure",
    "name": "Infrastructure",
    "type": "reviewinfo",
  },
  Object {
    "available": Array [],
    "encode": Array [
      "cacertificate",
    ],
    "footer": <CreateCredentialModal
      handleModalToggle={[MockFunction]}
    />,
    "id": "connection",
    "name": "Infrastructure provider credential",
    "onSelect": [Function],
    "placeholder": "Select a credential",
    "providerId": "ost",
    "tooltip": "The settings that are required for the selected provider. You can select an existing connection, or add a new connection. Cannot be changed after creation.",
    "type": "singleselect",
    "validation": Object {
      "notification": "Select a connection",
      "required": true,
    },
  },
  Object {
    "id": "name",
    "name": "Cluster name",
    "placeholder": "Enter cluster name",
    "reverse": "ClusterDeployment[0].metadata.name",
    "tooltip": "The unique name of your cluster. The value must be a string that contains lowercase alphanumeric values, such as dev. Cannot be changed after creation.",
    "type": "text",
    "validation": Object {
      "constraint": "^[a-z0-9]([a-z0-9-]{0,61}[a-z0-9])?$",
      "notification": "The value must be a valid DNS label that consists of up to 63 lowercase alphanumeric characters. The character '-' is also permitted, as long as it does not appear in the first or last position.",
      "required": true,
    },
  },
  Object {
    "available": Array [],
    "id": "clusterSet",
    "name": "Cluster set",
    "placeholder": "Select a cluster set",
    "tooltip": "A ManagedClusterSet is a group of managed clusters. With a ManagedClusterSet, you can manage access to all of the managed clusters in the group together. Clusters from the pool will be added to this set. After the cluster pool is created, the cluster set cannot be changed.",
    "type": "singleselect",
    "validation": Object {
      "required": false,
    },
  },
  Object {
    "id": "baseDomain",
    "name": "Base DNS domain",
    "placeholder": "Enter base DNS domain",
    "tip": "All DNS records must be subdomains of this base and include the cluster name. This cannot be changed after cluster installation.",
    "tooltip": "The base domain of your provider, which is used to create routes to your OpenShift Container Platform cluster components. It is configured in your cloud provider's DNS as a Start Of Authority record (SOA). Cannot be changed after creation.",
    "type": "text",
    "validation": Object {
      "contextTester": [Function],
      "required": true,
    },
  },
  Object {
    "active": false,
    "id": "fips",
    "name": "FIPS",
    "tip": "Use the Federal Information Processing Standards (FIPS) modules provided with Red Hat Enterprise Linux CoreOS instead of the default Kubernetes cryptography suite.",
    "type": "checkbox",
  },
  Object {
    "active": false,
    "id": "showSecrets",
    "type": "hidden",
  },
  Object {
    "fetchAvailable": Object {
      "emptyDesc": "No default images. Enter a release image path.",
      "loadingDesc": "Loading release image sets...",
      "query": [Function],
      "setAvailable": [Function],
      "setAvailableMap": [Function],
    },
    "id": "imageSet",
    "name": "Release image",
    "onSelect": [Function],
    "placeholder": "Select or enter a release image",
    "reverse": [Function],
    "simplified": [Function],
    "tooltip": "URL to the OpenShift install image set to use. Available images are listed, or you can enter your own path to add an image to the list.",
    "type": "combobox",
    "validation": Object {
      "notification": "Select a release image",
      "required": true,
    },
  },
  Object {
    "active": false,
    "hidden": true,
    "id": "singleNodeFeatureFlag",
    "type": "checkbox",
  },
  Object {
    "active": false,
    "hidden": [Function],
    "icon": <DevPreviewLabel />,
    "id": "singleNode",
    "name": "Single Node OpenShift",
    "onSelect": [Function],
    "tooltip": "To enable a single node OpenShift cluster with one control plane node and zero worker nodes. Only available in OpenShift 4.8 and higher.",
    "type": "checkbox",
  },
  Object {
    "active": Array [],
    "id": "additional",
    "name": "Additional labels",
    "tip": "Use labels to organize and place application subscriptions and policies on this cluster. The placement of resources are controlled by label selectors. If your cluster has the labels that match the resource placement’s label selector, the resource will be installed on your cluster after creation.",
    "type": "labels",
  },
  Object {
    "active": Array [
      "OpenStack",
    ],
    "availableMap": Object {
      "OpenStack": Object {
        "replacements": Object {
          "install-config": Object {
            "encode": true,
            "newTab": true,
            "template": [Function],
          },
        },
      },
    },
    "hasReplacements": true,
    "id": "infrastructure",
    "type": "hidden",
  },
  Object {
    "id": "nodePoolsStep",
    "title": "Node pools",
    "type": "step",
  },
  Object {
    "id": "nodes",
    "info": "The instance type and quantity of control plane and worker nodes to create for your cluster. Additional worker nodes can be added after the cluster is created.",
    "type": "title",
  },
  Object {
    "available": Array [
      "amd64",
      "arm64",
      "s390x",
      "ppc64le",
    ],
    "cacheUserValueKey": "create.cluster.architecture",
    "id": "architecture",
    "name": "CPU architecture",
    "placeholder": "Enter CPU architecture",
    "tooltip": "Determines the CPU instruction set architecture of the machines in the pool. Only set this value when the architecture of the managed cluster is different from the architecture of the hub.",
    "type": "singleselect",
  },
  Object {
    "controlData": Array [
      Object {
        "collapsable": true,
        "collapsed": true,
        "id": "masterPool",
        "info": "Three control plane nodes will be created to control this cluster.",
        "subtitle": "Control plane pool",
        "type": "section",
      },
      Object {
        "active": "m1.xlarge",
        "id": "masterType",
        "name": "Instance type",
        "tooltip": "The OpenStack compute flavor.",
        "type": "text",
        "validation": Object {
          "constraint": "[A-Za-z0-9-_.]+",
          "notification": "Value must be alphanumeric, including periods.",
          "required": true,
        },
      },
    ],
    "id": "masterPool",
    "onlyOne": true,
    "type": "group",
  },
  Object {
    "controlData": Array [
      Object {
        "collapsable": true,
        "collapsed": true,
        "id": "workerPool",
        "info": "One or more worker nodes will be created to run the container workloads in this cluster.",
        "subtitle": [Function],
        "type": "section",
      },
      Object {
        "active": "worker",
        "disabled": [Function],
        "id": "workerName",
        "name": "Pool name",
        "placeholder": "Enter pool name",
        "tooltip": "The name for your worker pool.",
        "type": "text",
        "validation": Object {
          "constraint": "[A-Za-z0-9-_]+",
          "notification": "Value must be alphanumeric.",
          "required": true,
        },
      },
      Object {
        "active": "m1.xlarge",
        "cacheUserValueKey": "create.cluster.worker.type",
        "id": "workerType",
        "name": "Instance type",
        "tooltip": "The OpenStack compute flavor.",
        "type": "text",
        "validation": Object {
          "constraint": "[A-Za-z0-9-_.]+",
          "notification": "Value must be alphanumeric, including periods.",
          "required": true,
        },
      },
      Object {
        "cacheUserValueKey": "create.cluster.compute.node.count",
        "id": "computeNodeCount",
        "initial": "3",
        "name": "Node count",
        "tooltip": "The number of nodes in this node pool.",
        "type": "number",
        "validation": Object {
          "notification": "Value must be integer.",
          "required": true,
          "tester": /\\^\\\\d\\+\\$/,
        },
      },
    ],
    "hidden": [Function],
    "id": "workerPools",
    "prompts": Object {
      "addPrompt": "Add worker pool",
      "baseName": "worker",
      "deletePrompt": "Delete node pool",
      "disableDeleteForFirst": true,
      "nameId": "workerName",
    },
    "type": "group",
  },
  Object {
    "id": "networkStep",
    "title": "Networking",
    "type": "step",
  },
  Object {
    "active": "",
    "id": "externalNetworkName",
    "name": "External network name",
    "tooltip": "The name for the external OpenStack network.",
    "type": "text",
    "validation": Object {
      "notification": "External network name is required.",
      "required": true,
    },
  },
  Object {
    "active": "",
    "hidden": [Function],
    "id": "lbFloatingIP",
    "name": "LB floating IP",
    "placeholder": "Enter LB floating IP",
    "tooltip": "The existing floating IP address on the Load Balancer for the OpenShift cluster.",
    "type": "text",
    "validation": Object {
      "contextTester": [Function],
      "required": true,
    },
  },
  Object {
    "active": "",
    "hidden": [Function],
    "id": "apiFloatingIP",
    "name": "API floating IP",
    "placeholder": "Enter API floating IP",
    "tooltip": "The existing floating IP address on the external network for the OpenShift API.",
    "type": "text",
    "validation": Object {
      "contextTester": [Function],
      "required": true,
    },
  },
  Object {
    "active": "",
    "id": "ingressFloatingIP",
    "name": "Ingress floating IP",
    "placeholder": "Enter ingress floating IP",
    "tooltip": "The existing floating IP address on the external network for the ingress port.",
    "type": "text",
    "validation": Object {
      "contextTester": [Function],
      "required": true,
    },
  },
  Object {
    "active": Array [],
    "id": "externalDNS",
    "name": "External DNS IP addresses",
    "placeholder": "Optional: Enter one or more external DNS IP addresses",
    "tooltip": "The external DNS IP addresses for name resolution on the private network.",
    "type": "values",
    "validation": Object {
      "contextTester": [Function],
      "required": false,
    },
  },
  Object {
    "id": "networkInfo",
    "info": "Configure network access for your cluster. One network is created by default.",
    "type": "title",
  },
  Object {
    "active": "OVNKubernetes",
    "available": Array [
      "OpenShiftSDN",
      "OVNKubernetes",
      "Kuryr",
    ],
    "id": "networkType",
    "name": "Network type",
    "tooltip": "The pod network provider plug-in to deploy. OVNKubernetes is required for IPv6. The default value is OpenShiftSDN.",
    "type": "singleselect",
    "validation": Object {
      "notification": "Value must be a valid security key.",
      "required": true,
    },
  },
  Object {
    "controlData": Array [
      Object {
        "collapsable": true,
        "id": "networkGroup",
        "info": "Specify at least one network. Multiple are required for IPv6.",
        "subtitle": [Function],
        "type": "section",
      },
      Object {
        "active": "10.128.0.0/14",
        "id": "clusterNetwork",
        "name": "Cluster network CIDR",
        "placeholder": "Enter cluster network CIDR",
        "tooltip": "A block of IP addresses from which pod IP addresses are allocated. The OpenShiftSDN network plug-in supports multiple cluster networks. The address blocks for multiple cluster networks must not overlap. Select address pools large enough to fit your anticipated workload. The default value is 10.128.0.0/14.",
        "type": "text",
        "validation": Object {
          "notification": "Value must be a valid IPv4 or IPv6 CIDR.",
          "required": true,
          "tester": Object {
            "test": [Function],
          },
        },
      },
      Object {
        "active": "23",
        "id": "hostPrefix",
        "name": "Network host prefix",
        "placeholder": "Enter network host prefix",
        "tooltip": "The subnet prefix length to assign to each individual node. For example, if hostPrefix is set to 23, then each node is assigned a /23 subnet out of the given CIDR, allowing for 510 (2^(32 - 23) - 2) pod IP addresses. The default is 23.",
        "type": "text",
        "validation": Object {
          "notification": "Value must be integer.",
          "required": true,
          "tester": /\\^\\\\d\\+\\$/,
        },
      },
      Object {
        "active": "172.30.0.0/16",
        "id": "serviceNetwork",
        "name": "Service network CIDR",
        "placeholder": "Enter service network CIDR",
        "tooltip": "A block of IP addresses for services. OpenShiftSDN allows only one serviceNetwork block. The address block must not overlap any other network block. The default value is 172.30.0.0/16.",
        "type": "text",
        "validation": Object {
          "notification": "Value must be a valid IPv4 or IPv6 CIDR.",
          "required": true,
          "tester": Object {
            "test": [Function],
          },
        },
      },
      Object {
        "active": "10.0.0.0/16",
        "id": "machineCIDR",
        "name": "Machine CIDR",
        "placeholder": "Enter machine CIDR",
        "tooltip": "A block of IP addresses used by the OpenShift Container Platform hosts. The address block must not overlap any other network block. The default value is 10.0.0.0/16.",
        "type": "text",
        "validation": Object {
          "notification": "Value must be a valid IPv4 or IPv6 CIDR.",
          "required": true,
          "tester": Object {
            "test": [Function],
          },
        },
      },
    ],
    "id": "networks",
    "prompts": Object {
      "addPrompt": "Add network",
      "deletePrompt": "Delete network",
    },
    "type": "group",
  },
  Object {
    "id": "proxyStep",
    "title": "Proxy",
    "type": "step",
  },
  Object {
    "id": "proxyInfo",
    "info": "Production environments can deny direct access to the Internet and instead have an HTTP or HTTPS proxy available. You can configure a new OpenShift Container Platform cluster to use a proxy by configuring the proxy settings.",
    "type": "title",
  },
  Object {
    "active": false,
    "id": "hasProxy",
    "name": "Use proxy",
    "onSelect": [Function],
    "type": "checkbox",
  },
  Object {
    "disabled": true,
    "id": "httpProxy",
    "name": "HTTP proxy",
    "tip": "Requires this format: http://<username>:<pswd>@<ip>:<port>",
    "type": "text",
    "validation": Object {
      "notification": "Value must be a valid URL format.",
      "required": true,
      "tester": Object {
        "test": [Function],
      },
    },
  },
  Object {
    "disabled": true,
    "id": "httpsProxy",
    "name": "HTTPS proxy",
    "tip": "Requires this format: https://<username>:<pswd>@<ip>:<port>",
    "type": "text",
    "validation": Object {
      "notification": "Value must be a valid URL format.",
      "required": true,
      "tester": Object {
        "test": [Function],
      },
    },
  },
  Object {
    "active": Array [],
    "disabled": true,
    "id": "noProxy",
    "name": "No proxy",
    "tip": "Add a comma-separated list of sites that bypass the proxy. The hub API server address must be included in this list. By default, all cluster egress traffic is sent through the proxy, including calls to hosting and cloud provider APIs.",
    "type": "values",
    "validation": Object {
      "notification": "Each value must be a domain name (optionally prefaced with '.' to match subdomains only), IP address, other network CIDR, or '*'.",
      "required": false,
      "tester": Object {
        "test": [Function],
      },
    },
  },
  Object {
    "disabled": true,
    "id": "additionalTrustBundle",
    "name": "Additional trust bundle",
    "placeholder": "-----BEGIN CERTIFICATE-----
<MY_TRUSTED_CA_CERT>
-----END CERTIFICATE-----",
    "type": "textarea",
  },
  Object {
    "id": "disconnectedStep",
    "title": "Disconnected installation",
    "type": "step",
  },
  Object {
    "id": "disconnectedInfo",
    "info": "Restricted networks which do not have direct access to the Internet require a mirror location of the Red Hat Enterprise Linux CoreOS image.",
    "type": "title",
  },
  Object {
    "active": false,
    "id": "isDisconnected",
    "name": "Create disconnected installation",
    "onSelect": [Function],
    "type": "checkbox",
  },
  Object {
    "disabled": true,
    "id": "clusterOSImage",
    "name": "Cluster OS image",
    "tip": "The location of the Red Hat Enterprise Linux CoreOS image in your local registry.",
    "type": "text",
    "validation": Object {
      "notification": "Value must be a valid URL format.",
      "required": true,
      "tester": Object {
        "test": [Function],
      },
    },
  },
  Object {
    "disabled": true,
    "id": "imageContentSources",
    "name": "Image Content Sources",
    "tip": "The imageContentSources values that were generated during mirror registry creation.",
    "type": "textarea",
  },
  Object {
    "disabled": true,
    "id": "disconnectedAdditionalTrustBundle",
    "name": "Additional trust bundle",
    "placeholder": "-----BEGIN CERTIFICATE-----
<MY_TRUSTED_CA_CERT>
-----END CERTIFICATE-----",
    "tip": "The contents of the certificate file that you used for your mirror registry, which can be an existing, trusted certificate authority or the self-signed certificate that you generated for the mirror registry.",
    "type": "textarea",
  },
  Object {
    "active": false,
    "id": "includeKlusterletAddonConfig",
    "type": "hidden",
  },
  Object {
    "id": "automationStep",
    "title": "Automation",
    "type": "step",
  },
  Object {
    "id": "chooseTemplate",
    "info": "Optional: Choose an automation template to run Ansible jobs at different stages of the cluster lifecycle.",
    "type": "title",
  },
  Object {
    "component": <AutomationProviderHint
      className="creation-view-controls-hint"
      component="hint"
    />,
    "id": "automationProviderHint",
    "type": "custom",
  },
  Object {
    "id": "templateName",
    "name": "Automation template",
    "onSelect": [Function],
    "placeholder": "Select an automation template",
    "prompts": Object {
      "icon": <ExternalLinkAltIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />,
      "id": "add-automation-template",
      "positionBottomRight": true,
      "prompt": "Add automation template",
      "type": "link",
      "url": "/multicloud/infrastructure/automations/add",
    },
    "tooltip": "Only templates with valid Ansible Automation Platform credentials are listed.",
    "type": "singleselect",
    "validation": Object {
      "required": false,
    },
  },
  Object {
    "component": <TemplateLinkOutControl />,
    "id": "curatorLinkOut",
    "type": "custom",
  },
  Object {
    "component": <TemplateSummaryControl />,
    "id": "curatorSummary",
    "type": "custom",
  },
  Object {
    "active": "",
    "id": "clusterCuratorSpec",
    "reverse": [Function],
    "type": "hidden",
  },
  Object {
    "active": Array [],
    "hidden": true,
    "id": "supportedCurations",
    "type": "values",
  },
  Object {
    "active": "",
    "id": "toweraccess-install",
    "type": "hidden",
  },
  Object {
    "active": "",
    "id": "toweraccess-upgrade",
    "type": "hidden",
  },
  Object {
    "active": "",
    "id": "toweraccess-scale",
    "type": "hidden",
  },
  Object {
    "active": "",
    "id": "toweraccess-destroy",
    "type": "hidden",
  },
  Object {
    "active": "",
    "id": "reconcilePause",
    "type": "hidden",
  },
]
`;

exports[`Cluster creation control data for OST generates correctly with SNO enabled 1`] = `
Array [
  Object {
    "id": "detailStep",
    "title": "Cluster details",
    "type": "step",
  },
  Object {
    "active": "OpenStack",
    "id": "infrastructure",
    "name": "Infrastructure",
    "type": "reviewinfo",
  },
  Object {
    "available": Array [],
    "encode": Array [
      "cacertificate",
    ],
    "footer": <CreateCredentialModal
      handleModalToggle={[MockFunction]}
    />,
    "id": "connection",
    "name": "Infrastructure provider credential",
    "onSelect": [Function],
    "placeholder": "Select a credential",
    "providerId": "ost",
    "tooltip": "The settings that are required for the selected provider. You can select an existing connection, or add a new connection. Cannot be changed after creation.",
    "type": "singleselect",
    "validation": Object {
      "notification": "Select a connection",
      "required": true,
    },
  },
  Object {
    "id": "name",
    "name": "Cluster name",
    "placeholder": "Enter cluster name",
    "reverse": "ClusterDeployment[0].metadata.name",
    "tooltip": "The unique name of your cluster. The value must be a string that contains lowercase alphanumeric values, such as dev. Cannot be changed after creation.",
    "type": "text",
    "validation": Object {
      "constraint": "^[a-z0-9]([a-z0-9-]{0,61}[a-z0-9])?$",
      "notification": "The value must be a valid DNS label that consists of up to 63 lowercase alphanumeric characters. The character '-' is also permitted, as long as it does not appear in the first or last position.",
      "required": true,
    },
  },
  Object {
    "available": Array [],
    "id": "clusterSet",
    "name": "Cluster set",
    "placeholder": "Select a cluster set",
    "tooltip": "A ManagedClusterSet is a group of managed clusters. With a ManagedClusterSet, you can manage access to all of the managed clusters in the group together. Clusters from the pool will be added to this set. After the cluster pool is created, the cluster set cannot be changed.",
    "type": "singleselect",
    "validation": Object {
      "required": false,
    },
  },
  Object {
    "id": "baseDomain",
    "name": "Base DNS domain",
    "placeholder": "Enter base DNS domain",
    "tip": "All DNS records must be subdomains of this base and include the cluster name. This cannot be changed after cluster installation.",
    "tooltip": "The base domain of your provider, which is used to create routes to your OpenShift Container Platform cluster components. It is configured in your cloud provider's DNS as a Start Of Authority record (SOA). Cannot be changed after creation.",
    "type": "text",
    "validation": Object {
      "contextTester": [Function],
      "required": true,
    },
  },
  Object {
    "active": false,
    "id": "fips",
    "name": "FIPS",
    "tip": "Use the Federal Information Processing Standards (FIPS) modules provided with Red Hat Enterprise Linux CoreOS instead of the default Kubernetes cryptography suite.",
    "type": "checkbox",
  },
  Object {
    "active": false,
    "id": "showSecrets",
    "type": "hidden",
  },
  Object {
    "fetchAvailable": Object {
      "emptyDesc": "No default images. Enter a release image path.",
      "loadingDesc": "Loading release image sets...",
      "query": [Function],
      "setAvailable": [Function],
      "setAvailableMap": [Function],
    },
    "id": "imageSet",
    "name": "Release image",
    "onSelect": [Function],
    "placeholder": "Select or enter a release image",
    "reverse": [Function],
    "simplified": [Function],
    "tooltip": "URL to the OpenShift install image set to use. Available images are listed, or you can enter your own path to add an image to the list.",
    "type": "combobox",
    "validation": Object {
      "notification": "Select a release image",
      "required": true,
    },
  },
  Object {
    "active": false,
    "hidden": true,
    "id": "singleNodeFeatureFlag",
    "type": "checkbox",
  },
  Object {
    "active": false,
    "hidden": [Function],
    "icon": <DevPreviewLabel />,
    "id": "singleNode",
    "name": "Single Node OpenShift",
    "onSelect": [Function],
    "tooltip": "To enable a single node OpenShift cluster with one control plane node and zero worker nodes. Only available in OpenShift 4.8 and higher.",
    "type": "checkbox",
  },
  Object {
    "active": Array [],
    "id": "additional",
    "name": "Additional labels",
    "tip": "Use labels to organize and place application subscriptions and policies on this cluster. The placement of resources are controlled by label selectors. If your cluster has the labels that match the resource placement’s label selector, the resource will be installed on your cluster after creation.",
    "type": "labels",
  },
  Object {
    "active": Array [
      "OpenStack",
    ],
    "availableMap": Object {
      "OpenStack": Object {
        "replacements": Object {
          "install-config": Object {
            "encode": true,
            "newTab": true,
            "template": [Function],
          },
        },
      },
    },
    "hasReplacements": true,
    "id": "infrastructure",
    "type": "hidden",
  },
  Object {
    "id": "nodePoolsStep",
    "title": "Node pools",
    "type": "step",
  },
  Object {
    "id": "nodes",
    "info": "The instance type and quantity of control plane and worker nodes to create for your cluster. Additional worker nodes can be added after the cluster is created.",
    "type": "title",
  },
  Object {
    "available": Array [
      "amd64",
      "arm64",
      "s390x",
      "ppc64le",
    ],
    "cacheUserValueKey": "create.cluster.architecture",
    "id": "architecture",
    "name": "CPU architecture",
    "placeholder": "Enter CPU architecture",
    "tooltip": "Determines the CPU instruction set architecture of the machines in the pool. Only set this value when the architecture of the managed cluster is different from the architecture of the hub.",
    "type": "singleselect",
  },
  Object {
    "controlData": Array [
      Object {
        "collapsable": true,
        "collapsed": true,
        "id": "masterPool",
        "info": "Three control plane nodes will be created to control this cluster unless single node is enabled, in which case there will only be one control plane node.",
        "subtitle": "Control plane pool",
        "type": "section",
      },
      Object {
        "active": "m1.xlarge",
        "id": "masterType",
        "name": "Instance type",
        "tooltip": "The OpenStack compute flavor.",
        "type": "text",
        "validation": Object {
          "constraint": "[A-Za-z0-9-_.]+",
          "notification": "Value must be alphanumeric, including periods.",
          "required": true,
        },
      },
    ],
    "id": "masterPool",
    "onlyOne": true,
    "type": "group",
  },
  Object {
    "controlData": Array [
      Object {
        "collapsable": true,
        "collapsed": true,
        "id": "workerPool",
        "info": "One or more worker nodes will be created to run the container workloads in this cluster.",
        "subtitle": [Function],
        "type": "section",
      },
      Object {
        "active": "worker",
        "disabled": [Function],
        "id": "workerName",
        "name": "Pool name",
        "placeholder": "Enter pool name",
        "tooltip": "The name for your worker pool.",
        "type": "text",
        "validation": Object {
          "constraint": "[A-Za-z0-9-_]+",
          "notification": "Value must be alphanumeric.",
          "required": true,
        },
      },
      Object {
        "active": "m1.xlarge",
        "cacheUserValueKey": "create.cluster.worker.type",
        "id": "workerType",
        "name": "Instance type",
        "tooltip": "The OpenStack compute flavor.",
        "type": "text",
        "validation": Object {
          "constraint": "[A-Za-z0-9-_.]+",
          "notification": "Value must be alphanumeric, including periods.",
          "required": true,
        },
      },
      Object {
        "cacheUserValueKey": "create.cluster.compute.node.count",
        "id": "computeNodeCount",
        "initial": "3",
        "name": "Node count",
        "tooltip": "The number of nodes in this node pool.",
        "type": "number",
        "validation": Object {
          "notification": "Value must be integer.",
          "required": true,
          "tester": /\\^\\\\d\\+\\$/,
        },
      },
    ],
    "hidden": [Function],
    "id": "workerPools",
    "prompts": Object {
      "addPrompt": "Add worker pool",
      "baseName": "worker",
      "deletePrompt": "Delete node pool",
      "disableDeleteForFirst": true,
      "nameId": "workerName",
    },
    "type": "group",
  },
  Object {
    "id": "networkStep",
    "title": "Networking",
    "type": "step",
  },
  Object {
    "active": "",
    "id": "externalNetworkName",
    "name": "External network name",
    "tooltip": "The name for the external OpenStack network.",
    "type": "text",
    "validation": Object {
      "notification": "External network name is required.",
      "required": true,
    },
  },
  Object {
    "active": "",
    "hidden": [Function],
    "id": "lbFloatingIP",
    "name": "LB floating IP",
    "placeholder": "Enter LB floating IP",
    "tooltip": "The existing floating IP address on the Load Balancer for the OpenShift cluster.",
    "type": "text",
    "validation": Object {
      "contextTester": [Function],
      "required": true,
    },
  },
  Object {
    "active": "",
    "hidden": [Function],
    "id": "apiFloatingIP",
    "name": "API floating IP",
    "placeholder": "Enter API floating IP",
    "tooltip": "The existing floating IP address on the external network for the OpenShift API.",
    "type": "text",
    "validation": Object {
      "contextTester": [Function],
      "required": true,
    },
  },
  Object {
    "active": "",
    "id": "ingressFloatingIP",
    "name": "Ingress floating IP",
    "placeholder": "Enter ingress floating IP",
    "tooltip": "The existing floating IP address on the external network for the ingress port.",
    "type": "text",
    "validation": Object {
      "contextTester": [Function],
      "required": true,
    },
  },
  Object {
    "active": Array [],
    "id": "externalDNS",
    "name": "External DNS IP addresses",
    "placeholder": "Optional: Enter one or more external DNS IP addresses",
    "tooltip": "The external DNS IP addresses for name resolution on the private network.",
    "type": "values",
    "validation": Object {
      "contextTester": [Function],
      "required": false,
    },
  },
  Object {
    "id": "networkInfo",
    "info": "Configure network access for your cluster. One network is created by default.",
    "type": "title",
  },
  Object {
    "active": "OVNKubernetes",
    "available": Array [
      "OpenShiftSDN",
      "OVNKubernetes",
      "Kuryr",
    ],
    "id": "networkType",
    "name": "Network type",
    "tooltip": "The pod network provider plug-in to deploy. OVNKubernetes is required for IPv6. The default value is OpenShiftSDN.",
    "type": "singleselect",
    "validation": Object {
      "notification": "Value must be a valid security key.",
      "required": true,
    },
  },
  Object {
    "controlData": Array [
      Object {
        "collapsable": true,
        "id": "networkGroup",
        "info": "Specify at least one network. Multiple are required for IPv6.",
        "subtitle": [Function],
        "type": "section",
      },
      Object {
        "active": "10.128.0.0/14",
        "id": "clusterNetwork",
        "name": "Cluster network CIDR",
        "placeholder": "Enter cluster network CIDR",
        "tooltip": "A block of IP addresses from which pod IP addresses are allocated. The OpenShiftSDN network plug-in supports multiple cluster networks. The address blocks for multiple cluster networks must not overlap. Select address pools large enough to fit your anticipated workload. The default value is 10.128.0.0/14.",
        "type": "text",
        "validation": Object {
          "notification": "Value must be a valid IPv4 or IPv6 CIDR.",
          "required": true,
          "tester": Object {
            "test": [Function],
          },
        },
      },
      Object {
        "active": "23",
        "id": "hostPrefix",
        "name": "Network host prefix",
        "placeholder": "Enter network host prefix",
        "tooltip": "The subnet prefix length to assign to each individual node. For example, if hostPrefix is set to 23, then each node is assigned a /23 subnet out of the given CIDR, allowing for 510 (2^(32 - 23) - 2) pod IP addresses. The default is 23.",
        "type": "text",
        "validation": Object {
          "notification": "Value must be integer.",
          "required": true,
          "tester": /\\^\\\\d\\+\\$/,
        },
      },
      Object {
        "active": "172.30.0.0/16",
        "id": "serviceNetwork",
        "name": "Service network CIDR",
        "placeholder": "Enter service network CIDR",
        "tooltip": "A block of IP addresses for services. OpenShiftSDN allows only one serviceNetwork block. The address block must not overlap any other network block. The default value is 172.30.0.0/16.",
        "type": "text",
        "validation": Object {
          "notification": "Value must be a valid IPv4 or IPv6 CIDR.",
          "required": true,
          "tester": Object {
            "test": [Function],
          },
        },
      },
      Object {
        "active": "10.0.0.0/16",
        "id": "machineCIDR",
        "name": "Machine CIDR",
        "placeholder": "Enter machine CIDR",
        "tooltip": "A block of IP addresses used by the OpenShift Container Platform hosts. The address block must not overlap any other network block. The default value is 10.0.0.0/16.",
        "type": "text",
        "validation": Object {
          "notification": "Value must be a valid IPv4 or IPv6 CIDR.",
          "required": true,
          "tester": Object {
            "test": [Function],
          },
        },
      },
    ],
    "id": "networks",
    "prompts": Object {
      "addPrompt": "Add network",
      "deletePrompt": "Delete network",
    },
    "type": "group",
  },
  Object {
    "id": "proxyStep",
    "title": "Proxy",
    "type": "step",
  },
  Object {
    "id": "proxyInfo",
    "info": "Production environments can deny direct access to the Internet and instead have an HTTP or HTTPS proxy available. You can configure a new OpenShift Container Platform cluster to use a proxy by configuring the proxy settings.",
    "type": "title",
  },
  Object {
    "active": false,
    "id": "hasProxy",
    "name": "Use proxy",
    "onSelect": [Function],
    "type": "checkbox",
  },
  Object {
    "disabled": true,
    "id": "httpProxy",
    "name": "HTTP proxy",
    "tip": "Requires this format: http://<username>:<pswd>@<ip>:<port>",
    "type": "text",
    "validation": Object {
      "notification": "Value must be a valid URL format.",
      "required": true,
      "tester": Object {
        "test": [Function],
      },
    },
  },
  Object {
    "disabled": true,
    "id": "httpsProxy",
    "name": "HTTPS proxy",
    "tip": "Requires this format: https://<username>:<pswd>@<ip>:<port>",
    "type": "text",
    "validation": Object {
      "notification": "Value must be a valid URL format.",
      "required": true,
      "tester": Object {
        "test": [Function],
      },
    },
  },
  Object {
    "active": Array [],
    "disabled": true,
    "id": "noProxy",
    "name": "No proxy",
    "tip": "Add a comma-separated list of sites that bypass the proxy. The hub API server address must be included in this list. By default, all cluster egress traffic is sent through the proxy, including calls to hosting and cloud provider APIs.",
    "type": "values",
    "validation": Object {
      "notification": "Each value must be a domain name (optionally prefaced with '.' to match subdomains only), IP address, other network CIDR, or '*'.",
      "required": false,
      "tester": Object {
        "test": [Function],
      },
    },
  },
  Object {
    "disabled": true,
    "id": "additionalTrustBundle",
    "name": "Additional trust bundle",
    "placeholder": "-----BEGIN CERTIFICATE-----
<MY_TRUSTED_CA_CERT>
-----END CERTIFICATE-----",
    "type": "textarea",
  },
  Object {
    "id": "disconnectedStep",
    "title": "Disconnected installation",
    "type": "step",
  },
  Object {
    "id": "disconnectedInfo",
    "info": "Restricted networks which do not have direct access to the Internet require a mirror location of the Red Hat Enterprise Linux CoreOS image.",
    "type": "title",
  },
  Object {
    "active": false,
    "id": "isDisconnected",
    "name": "Create disconnected installation",
    "onSelect": [Function],
    "type": "checkbox",
  },
  Object {
    "disabled": true,
    "id": "clusterOSImage",
    "name": "Cluster OS image",
    "tip": "The location of the Red Hat Enterprise Linux CoreOS image in your local registry.",
    "type": "text",
    "validation": Object {
      "notification": "Value must be a valid URL format.",
      "required": true,
      "tester": Object {
        "test": [Function],
      },
    },
  },
  Object {
    "disabled": true,
    "id": "imageContentSources",
    "name": "Image Content Sources",
    "tip": "The imageContentSources values that were generated during mirror registry creation.",
    "type": "textarea",
  },
  Object {
    "disabled": true,
    "id": "disconnectedAdditionalTrustBundle",
    "name": "Additional trust bundle",
    "placeholder": "-----BEGIN CERTIFICATE-----
<MY_TRUSTED_CA_CERT>
-----END CERTIFICATE-----",
    "tip": "The contents of the certificate file that you used for your mirror registry, which can be an existing, trusted certificate authority or the self-signed certificate that you generated for the mirror registry.",
    "type": "textarea",
  },
  Object {
    "active": true,
    "id": "includeKlusterletAddonConfig",
    "type": "hidden",
  },
  Object {
    "id": "automationStep",
    "title": "Automation",
    "type": "step",
  },
  Object {
    "id": "chooseTemplate",
    "info": "Optional: Choose an automation template to run Ansible jobs at different stages of the cluster lifecycle.",
    "type": "title",
  },
  Object {
    "component": <AutomationProviderHint
      className="creation-view-controls-hint"
      component="hint"
    />,
    "id": "automationProviderHint",
    "type": "custom",
  },
  Object {
    "id": "templateName",
    "name": "Automation template",
    "onSelect": [Function],
    "placeholder": "Select an automation template",
    "prompts": Object {
      "icon": <ExternalLinkAltIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />,
      "id": "add-automation-template",
      "positionBottomRight": true,
      "prompt": "Add automation template",
      "type": "link",
      "url": "/multicloud/infrastructure/automations/add",
    },
    "tooltip": "Only templates with valid Ansible Automation Platform credentials are listed.",
    "type": "singleselect",
    "validation": Object {
      "required": false,
    },
  },
  Object {
    "component": <TemplateLinkOutControl />,
    "id": "curatorLinkOut",
    "type": "custom",
  },
  Object {
    "component": <TemplateSummaryControl />,
    "id": "curatorSummary",
    "type": "custom",
  },
  Object {
    "active": "",
    "id": "clusterCuratorSpec",
    "reverse": [Function],
    "type": "hidden",
  },
  Object {
    "active": Array [],
    "hidden": true,
    "id": "supportedCurations",
    "type": "values",
  },
  Object {
    "active": "",
    "id": "toweraccess-install",
    "type": "hidden",
  },
  Object {
    "active": "",
    "id": "toweraccess-upgrade",
    "type": "hidden",
  },
  Object {
    "active": "",
    "id": "toweraccess-scale",
    "type": "hidden",
  },
  Object {
    "active": "",
    "id": "toweraccess-destroy",
    "type": "hidden",
  },
  Object {
    "active": "",
    "id": "reconcilePause",
    "type": "hidden",
  },
]
`;
